# lados

./: .gitignore  Dockerfile  README.md  README_RU.md  SERVICE_HEALTH_CHECK.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
configs/: train_efficientnet_b0.yaml  train_resnet50.yaml  train_vit.yaml
data/: README.md
flutter/sample_app/: README.md  pubspec.yaml
flutter/sample_app/test/: widget_test.dart
flutter/sample_app/web/: index.html
infra/dags/: retrain_lados.py
manifests/: test.csv  train.csv  val.csv
observability/: prometheus.yml
ops/.github/workflows/: ci.yml
scripts/: check_services.py  check_services.sh  download_lados.py  export_model.py  launch_web.sh  repro.sh  smoke_infer.sh  smoke_train.sh  train.py  verify_classes.py
src/: __init__.py
src/data/: __init__.py  dataset.py  transforms.py
src/eval/: __init__.py  metrics.py  plotting.py
src/models/: __init__.py  model_registry.py
src/server/: __init__.py  app.py
src/tasks/: __init__.py  celery_app.py  tasks.py
tests/: __init__.py  test_api.py  test_data.py  test_training.py
web/: index.html
